[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/images/ui/heart-full.png" type="Texture" id=1]
[ext_resource path="res://src/GUI/GUI.gd" type="Script" id=2]

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 104.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 120.0
margin_bottom = 48.0
mouse_filter = 2

[node name="HeartTR" type="TextureRect" parent="MarginContainer/HBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_vertical = 4
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_editor_description_": ""
}

[node name="HeartTR2" type="TextureRect" parent="MarginContainer/HBoxContainer"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_vertical = 4
texture = ExtResource( 1 )
expand = true

[node name="HeartTR3" type="TextureRect" parent="MarginContainer/HBoxContainer"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_vertical = 4
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_editor_description_": ""
}
